CHANGES.txt - 11/31/2000
------------------------

CHANGES IN HTMLDOC v1.8.9

    NEW FEATURES

	- Added a "--no-numbered" option to turn heading numbers
	  off.
	- Added support for "keywords" META data.
	- Added support for BMP images.
	- Added support for ROWSPAN attribute in tables.
	- Added support for HTTP file references.
	- Added new sample CGI program that can produce a PDF
	  file for any page on a server.
	- Added new n/N, date, and time formats for the header
	  and footer.

    CHANGES

	- Configuration script changes.
	- Now ignore file count in book files; instead, we now
	  look at the first character of the third and
	  subsequent lines - a dash (-) indicates the start of
	  the options. (use a backslash to quote filenames
	  starting with a dash)
	- Multiple-line paragraphs that have only 1 line on the
	  bottom of the current page are now started on the
	  following page.
	- DSC comments in PostScript output were not 100%
	  conformant with the DSC spec.
	- Long table-of-contents entries are now wrapped
	  (original patch supplied by Richard Pennington)
	- New color icon under UNIX when Xpm library available.

    BUG FIXES

	- Didn't allow &#nnn; character escapes inside
	  preformatted text.
	- Empty TBODY groups would cause parse_table() to
	  crash.
	- Comments were incorrectly terminated by ">" instead of
	  "-->".
	- The command-line and GUI interfaces looked for
	  "outlines" instead of "outline" for the page mode.
	- The HTML output code didn't output closing tags for
	  empty elements.
	- The GUI interface started with the compression
	  slider enabled, even for HTML output.
	- The beginnings of some lines could start with
	  whitespace.
	- Wasn't aligning images and text on lines based on the
	  line height.
	- The compression slider was enabled in the GUI even
	  though HTML output was selected.
	- The Perl example code was incorrect.
	- Fixed the check for whether or not pages were
	  generated.