@@ -21,7 +21,7 @@ Choose <VAR>HTMLDOC</VAR> from the <VAR>Start</VAR> menu to start
 
 The <I>HTMLDOC</I> window (Figure 2-1) shows the list of input files that
 will be converted. Start by clicking on the <VAR>Web Page</VAR> radio
-button (1) to specify you'll be converting a single HTML file.
+button (1) to specify that you will be converting a HTML web page file.
 
 <P ALIGN="CENTER"><IMG SRC="htmldoc-fig21.png">
 <BR>Figure 2-1 - The HTMLDOC Window
@@ -43,6 +43,9 @@ the file chooser.
 
 <P ALIGN="CENTER"><IMG SRC="htmldoc-fig23.png">
 <BR>Figure 2-3 - The Output Tab
+
+<P>Since you chose to convert a <VAR>Web Page</VAR> instead of a book,
+<I>HTMLDOC</I> has automatically chosen to produce a PDF file.
 
 <H2>Generating the Document</H2>
 
