@@ -36,19 +36,24 @@ elements.
 <H2>Choosing HTML Files</H2>
 
 Start by clicking on the <VAR>Book</VAR> radio button (1) to specify you'll
-be converting a one or more HTML files into a book.
+be converting one or more HTML files into a book.
 
 <P>Then choose one or more files for conversion by clicking on the
 <VAR>Add Files...</VAR> button (2). When the file chooser dialog appears,
 pick the file(s) you wish to convert from the list of files and then
 click on the <VAR>OK</VAR> button.
 
-<H2>Selecting a Title Image</H2>
+<H2>Selecting a Title File</H2>
 
-<I>HTMLDOC</I> supports generation of a title page with an image, the
-title text, and other <CODE>META</CODE> information on it. Type the
-title image filename into the <VAR>Title Image</VAR> field or click on
+<I>HTMLDOC</I> supports automatic generation of a title page using an image
+file, the title text, and other <CODE>META</CODE> information on it. Type the
+title image filename into the <VAR>Title File</VAR> field or click on
 the <VAR>Browse...</VAR> button (3) to select a title image for your book.
+
+<P><I>HTMLDOC</I> can also use a HTML file that you have generated for the
+title page(s). To use a HTML title page, type the title filename into the
+<VAR>Title File</VAR> field or click on the <VAR>Browse...</VAR> button (3)
+to select a HTML file for your book.
 
 <P ALIGN="CENTER"><IMG SRC="htmldoc-fig32.png">
 <BR>Figure 3-2: The Output Tab
@@ -73,9 +78,9 @@ Once you have chosen the output file you can generate it by clicking on the
 
 <H2>Saving Your Book</H2>
 
-<I>HTMLDOC</I> can save the list of HTML files, the title image, and all other
+<I>HTMLDOC</I> can save the list of HTML files, the title file, and all other
 options to a special <CODE>.BOOK</CODE> file so you can regenerate your book
-when you make changed to your HTML files.
+when you make changes to your HTML files.
 
 <P>Click on the <VAR>Save</VAR> button (7) to save the current book to a file.
 
