@@ -26,7 +26,6 @@ report from your server and passes a PDF version to the web
 browser. See the next section for more information.
 
 <!-- NEED 5in -->
-
 <H2>Calling HTMLDOC from a Shell Script</H2>
 
 Shell scripts are probably the easiest to work with, but are normally
@@ -62,8 +61,12 @@ htmldoc $options http://${SERVER_NAME}:${SERVER_PORT}$PATH_INFO
 </PRE></UL>
 
 <P>Users of this CGI would reference the URL
-"http://www.domain.com/topdf.cgi/index.html" to generate a PDF file of the
-site's home page.
+"http://www.domain.com/topdf.cgi/index.html" to generate a PDF
+file of the site's home page.
+
+<P>The <VAR>options</VAR> variable in the script can be set to use any
+supported command-line option for HTMLDOC; for a complete list see
+<A HREF="#CMDREF">Chapter 8 - Command-Line Reference</A>.
 
 <H2>Calling HTMLDOC from Perl</H2>
 
