@@ -219,6 +219,7 @@ the table-of-contents that is generated will show:
 	</UL>
 </UL>
 
+<!-- NEED 6in -->
 <H3>Numbered Headings</H3>
 
 When the numbered headings option is enabled, <I>HTMLDOC</I> recognizes the
@@ -254,13 +255,9 @@ following additional attributes for all heading elements:
 
 <H2><A NAME="IMAGES">Images</A></H2>
 
-<I>HTMLDOC</I> supports loading of GIF, JPEG, and PNG image files.
-EPS, BMP, and other types of image files are not supported at this
+<I>HTMLDOC</I> supports loading of BMP, GIF, JPEG, and PNG image files.
+EPS, and other types of image files are not supported at this
 time.
-
-<P><B>Image files must be located on the local system</B>. HTMLDOC
-does not currently support loading of images on remote systems via
-HTTP or FTP.
 
 <H2><A NAME="LINKS">Links</A></H2>
 
